--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           MSSQL_SA_PASSWORD: test!1234
           ACCEPT_EULA: Y
     steps:
+      - checkout
       - run: dotnet build src/mathtone-magic.sln --configuration Release
 workflows:
   
