--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,10 @@ workflows:
           suffix: alpha
           requires:
             - prep-project
+      - pack-projects:
+          suffix: alpha
+          requires:
+            - run-tests
       # - pack-projects:
       #     suffix: alpha
       #     requires:
