--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             not:
               equal: [ << parameters.suffix >> , '' ]
           steps:
-            - run: echo hi
+            - run: dotnet pack << parameters.project >> --configuration Release --no-build --output packages --version-suffix << parameters.suffix >>
       # swap refs
 workflows:
   
