--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,7 @@ workflows:
           type: approval
           requires:
             - run-tests
+            - "Pack Alpha"
             
       # - pack-projects:
       #     suffix: alpha
