--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ workflows:
           requires:
             - run-tests
       - deploy-beta-artifactory:
+          context: MATHTONE_DEV
           type: approval
           requires:
             - "Pack Beta"
