--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,14 @@ jobs:
           at: .
       - run: dotnet nuget add source https://mathtone.jfrog.io/artifactory/api/nuget/v3/mathtone-dev --name Mathtone-Dev --username ${ARTIFACTORY_USER} --password ${ARTIFACTORY_PWD} --store-password-in-clear-text
       - run: dotnet nuget push packages/*-alpha.nupkg --source Mathtone-Dev
+  deploy-beta-artifactory:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    steps:
+      - attach_workspace:
+          at: .
+      - run: dotnet nuget add source https://mathtone.jfrog.io/artifactory/api/nuget/v3/mathtone-dev --name Mathtone-Dev --username ${ARTIFACTORY_USER} --password ${ARTIFACTORY_PWD} --store-password-in-clear-text
+      - run: dotnet nuget push packages/*-beta.nupkg --source Mathtone-Dev
 workflows:
   build:
     jobs:
@@ -102,11 +110,14 @@ workflows:
           prerelease: false
           requires:
             - run-tests
-      - deploy-beta-artifactory:
-          context: MATHTONE_DEV
+      - approve-beta-artifactory:
           type: approval
           requires:
             - "Pack Beta"
+      - deploy-beta-artifactory:
+          context: MATHTONE_DEV
+          requires:
+            - approve-beta-artifactory
       - deploy-beta-nuget:
           type: approval
           requires:
